update :: 更新导航栏布局 :: 更新搜索源结果显示布局 :: 添加新的翻译

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -28,7 +28,9 @@
     "search": "Search",
     "add": "Add",
     "cancel": "Cancel",
-    "subscribed": "Subscribed"
+    "subscribed": "Subscribed",
+    "subscriber": "Subscriber",
+    "import": "import / export"
   },
   "footer": {
     "text": "Powered by Vue and Go"
