update :: 添加未读文章为0提示 :: 修改未读计数逻辑 :: 添加翻译

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -22,7 +22,8 @@
     "back": "Back",
     "setread": "Set As Read",
     "setunread": "Set As Unread",
-    "link": "Link"
+    "link": "Link",
+    "empty":"Empty"
   },
   "feed": {
     "search": "Search",
