update :: 更新设置页面 :: 导航栏部分内容迁移到设置页面

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -9,9 +9,13 @@
     "feeds": "Feeds",
     "login": "Login",
     "about": "About",
-    "exit": "Exit",
     "settings": "Settings",
     "register": "Register"
+  },
+  "setting": {
+    "CachedArticle": "Cached article",
+    "exit": "Exit",
+    "clearCache":"Clear cache"
   },
   "post": {
     "update": "Update",
