--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -9,9 +9,13 @@
     "feeds": "订阅源",
     "login": "登录",
     "about": "关于",
-    "exit": "退出",
     "settings": "设置",
     "register": "注册"
+  },
+  "setting": {
+    "CachedArticle": "已缓存文章",
+    "exit": "退出",
+    "clearCache":"清除缓存"
   },
   "post": {
     "update": "更新",
