update :: 修改样式 :: 新增缓存统计 :: 修改缓存逻辑

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -15,7 +15,9 @@
   "setting": {
     "CachedArticle": "Cached article",
     "exit": "Exit",
-    "clearCache":"Clear cache"
+    "clearCache":"Clear cache",
+    "info": "Analysis",
+    "hide": "Hide Analysis"
   },
   "post": {
     "update": "Update",
