update :: 本地缓存管理粒度缩小 :: 自动缓存前期准备

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -17,7 +17,9 @@
     "exit": "Exit",
     "clearCache":"Clear cache",
     "info": "Analysis",
-    "hide": "Hide Analysis"
+    "hide": "Hide Analysis",
+    "autodownload": "Auto download",
+    "autodownloadset": "Download Settings"
   },
   "post": {
     "update": "Update",
@@ -29,7 +31,8 @@
     "setread": "Set As Read",
     "setunread": "Set As Unread",
     "link": "Link",
-    "empty":"Empty"
+    "empty":"Empty",
+    "cache": "Cached"
   },
   "feed": {
     "search": "Search",
