--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -17,7 +17,9 @@
     "exit": "退出",
     "clearCache":"清除缓存",
     "info": "统计",
-    "hide": "隐藏统计"
+    "hide": "隐藏统计",
+    "autodownload": "自动下载",
+    "autodownloadset": "下载设置"
   },
   "post": {
     "update": "更新",
@@ -31,7 +33,8 @@
     "link": "原文链接",
     "prev": "上一页",
     "next": "下一页",
-    "empty":"无未读文章"
+    "empty":"无未读文章",
+    "cache": "已缓存"
   },
   "feed": {
     "search": "搜索",
