update :: 更新页面逻辑

--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -19,7 +19,10 @@
     "info": "统计",
     "hide": "隐藏统计",
     "autodownload": "自动下载",
-    "autodownloadset": "下载设置"
+    "autodownloadset": "下载设置",
+    "sync": "同步",
+    "lastupdate": "上次同步",
+    "syncsetting": "同步设置"
   },
   "post": {
     "update": "更新",
@@ -28,8 +31,8 @@
     "read": "已读",
     "all": "全部",
     "back": "返回",
-    "setread": "标为已读",
-    "setunread": "标为未读",
+    "setread": "已阅",
+    "setunread": "稍后再读",
     "link": "原文链接",
     "prev": "上一页",
     "next": "下一页",
