--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -19,7 +19,10 @@
     "info": "Analysis",
     "hide": "Hide Analysis",
     "autodownload": "Auto download",
-    "autodownloadset": "Download Settings"
+    "autodownloadset": "Download Settings",
+    "sync": "Sync",
+    "lastupdate": "Last update",
+    "syncsetting": "Sync"
   },
   "post": {
     "update": "Update",
@@ -29,7 +32,7 @@
     "all": "All",
     "back": "Back",
     "setread": "Set As Read",
-    "setunread": "Set As Unread",
+    "setunread": "Read after",
     "link": "Link",
     "empty":"Empty",
     "cache": "Cached"
