update :: 更新稍后阅读逻辑 :: 更新翻译 :: 更新缓存排序

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -35,7 +35,7 @@
     "setunread": "Read after",
     "link": "Link",
     "empty":"Empty",
-    "cache": "Cached"
+    "readafter": "Read after"
   },
   "feed": {
     "search": "Search",
