--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -11,7 +11,7 @@
     "about": "关于",
     "settings": "设置",
     "register": "注册",
-    "news": "新公告 !"
+    "news": "新公告"
   },
   "setting": {
     "CachedArticle": "已缓存文章",
@@ -25,7 +25,11 @@
     "lastupdate": "上次同步",
     "syncsetting": "同步设置",
     "postlistnum": "加载文章数量",
-    "save": "保存"
+    "save": "保存",
+    "password": "密码",
+    "edit": "修改",
+    "hidepassword": "隐藏密码",
+    "showpassword": "显示密码"
   },
   "post": {
     "update": "更新",
