--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -11,7 +11,7 @@
     "about": "About",
     "settings": "Settings",
     "register": "Register",
-    "news": "Notice"
+    "news": "Noticerss  w "
   },
   "setting": {
     "CachedArticle": "Cached article",
