update :: web opml导出

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -42,7 +42,8 @@
     "setunread": "Read after",
     "link": "Link",
     "empty": "Empty",
-    "readafter": "Read after"
+    "readafter": "Read after",
+    "next": "Next Article"
   },
   "feed": {
     "search": "Search",
