--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -42,7 +42,7 @@
     "setunread": "稍后再读",
     "link": "原文链接",
     "prev": "上一页",
-    "next": "下一页",
+    "next": "下一篇",
     "empty": "无未读文章",
     "readafter": "稍后阅读"
   },
