update :: 优化前端验证跳转

--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -11,7 +11,7 @@
     "about": "关于",
     "settings": "设置",
     "register": "注册",
-    "news": "新公告"
+    "news": "公告"
   },
   "setting": {
     "CachedArticle": "已缓存文章",
