--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -56,7 +56,9 @@
     "export": "导出",
     "clear": "清除",
     "download": "下载",
-    "upload": "上传"
+    "upload": "上传",
+    "geterror": "该源数据获取可能存在问题，已经降低抓取频次",
+    "getstop": "该源数据获取可能存在问题，已经停止抓取"
   },
   "footer": {
     "text": "由 Vue 与 Go 强劲驱动"
