update :: 重新考虑设置页面 :: 加载文章动画 :: 更新翻译

--- a/web/src/locales/en-US.json
+++ b/web/src/locales/en-US.json
@@ -11,7 +11,8 @@
     "about": "About",
     "settings": "Settings",
     "register": "Register",
-    "news": "Notice"
+    "news": "Notice",
+    "account": "Account"
   },
   "setting": {
     "CachedArticle": "Cached article",
